additive blending working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# bevy = { git = "https://github.com/bevyengine/bevy.git" }
 bevy = "0.15.0-rc.3"
+# bevy = { path = "/Users/chris/tmp/bevy" }
+# branch = "release-0.15.0" }
+bevy-inspector-egui = { git = "https://github.com/Vrixyz/bevy-inspector-egui", branch = "bevy_0.15" }
 
 # Enable max optimizations for dependencies, but not for our code:
 [profile.dev.package."*"]
@@ -13,3 +17,6 @@ opt-level = 3
 # Enable only a small amount of optimization in debug mode
 [profile.dev]
 opt-level = 1
+
+[patch.crates-io]
+bevy_egui = { git = "https://github.com/Vrixyz/bevy_egui", branch = "bevy_main" }
